--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.0
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
+  http: ^1.3.0
+  flutter_svg: ^2.0.17
+  bottom_sheet: ^4.0.4
+  go_router: ^14.8.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
