--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   go_router: ^14.8.1
   shared_preferences: ^2.5.3
   google_fonts: ^6.2.1
+  modal_bottom_sheet: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
